# GADGET2

./: .gitignore  README.md  pyproject.toml  testing.ipynb
gui/: CNN_Frame_test.py  EnergySpectrumFrame.py  IndividualEventFrame.py  RawDataGUI.py  RunSelectFrame.py  RvE_Frame.py  The_GADGET_GUI.py  activate_env  gadget_widgets.py  icons8-physics-48.xbm  main_gui.py  prev_cut_select_window.py  view_cut_images_window.py
gui/PointCloudConstruction/: Phase1.py
gui/PointCloudConstruction/tpc_utils/: __init__.py  cnn_utils.py  pc_analysis.py  tspectrum.py
gui/fit_gui/: FitElementFrame.py  FitFrame.py  HistogramFitFrame.py  VerticalScrolledFrame.py  p10_alpha_850torr.npy
gui/fit_gui/track_projections/: data_to_stopping_power_comparision.py
gui/raw_viewer/: LookupGADGET08232021.csv  RawEventViewerFrame.py  heritage_h5_file.py
gui/raw_viewer/gui_configs/: default.gui_ini  p10_convolution_background_subtract.gui_ini  p10_default.gui_ini  smart.gui_ini
src/GADGET2/: CurveFit.py  EnergyCalibration.py  EnergySpectrum.py  GenerateFiles.py  Images.py  ImagesCNN.py  PointCloud.py  RVE.py  RawH5.py  Remap.py  RunH5.py  __init__.py  cnn_images.py  energy_calibration.py  energy_spectrum.py  event_plotting.py  generate_files.py  point_cloud.py  range_vs_energy.py  raw_h5.py  remap.py  run_h5.py  utils.py
src/GADGET2/data/: 1sd_cut.txt  2sd_cut.txt  PadPlane.csv  file_formats.txt  flatlookup2cobos.csv  (+2 more)
tests/: test_CurveFit.py  test_EnergyCalibration.py  test_EnergySpectrum.py  test_energy_calibration.py  test_energy_spectrum.py  test_test.py  test_utils.py  testing.ipynb
