[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GADGET2"
version = "0.0.4"
description = "Processing, Analysis, and Simulation for the GADGET2 TPC at FRIB"
authors = [
    { name = "Adam", email = "jaros@frib.msu.edu" }
]
dependencies = [
"baselineremoval",
"h5py",
"math"
"matplotlib",
"numpy",
"os",
"pandas",
"random,
"scipy",
"shutil",
"scikit-learn",
"scikit-spatial",
"socket",
"sys"
"tqdm"
]