[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GADGET2"
version = "0.0.5"
description = "Processing, Analysis, and Simulation for the GADGET2 TPC at FRIB"
authors = [
    { name = "Adam", email = "jaros@frib.msu.edu" }
]
readme = "README.md"
requires-python = ">=3.7.3"
dependencies = [
"baselineremoval",
"h5py",
"matplotlib",
"numpy",
"pandas",
"scipy",
"scikit-learn",
"scikit-spatial",
"tqdm"
]